<resources>
    <string name="app_name">SoptHW1</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="pwCheck">PW Check</string>
    <string name="difPw">* 패스워드가 다릅니다</string>
    <string name="maintainLogin">로그인 상태 유지</string>
    <string name="loginComplete">로그인 완료</string>
    <string name="logout">로그아웃</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="profile">프로필</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>