<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editsignName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/signName"
        android:hint="@string/name"
        android:textColorHint="@color/hintGray"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/signID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/editsignName"
        app:layout_constraintStart_toStartOf="@id/editsignName"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/editsignID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/signID"

        android:hint="@string/id"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/signPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/editsignID"
        app:layout_constraintStart_toStartOf="@id/editsignID"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/editSignPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/signPW"
        android:hint="@string/pw"
        android:textColorHint="@color/hintGray"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/editsignPwCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/editSignPW"
        android:hint="@string/pwCheck"
        android:textColorHint="@color/hintGray"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:background="@drawable/button_them"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/editsignPwCheck"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="20dp"
        android:textSize="18sp"
        android:id="@+id/signDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/warningDifPw"
        android:text="@string/difPw"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@id/signPW"
        app:layout_constraintTop_toBottomOf="@id/editsignID"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>