<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editLoginId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginId"
        android:hint="@string/id"
        android:textColorHint="@color/hintGray"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/loginPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pw"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/editLoginId"
        app:layout_constraintStart_toStartOf="@id/editLoginId"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/editLoginPW"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/loginPW"
        android:hint="@string/pw"
        android:textColorHint="@color/hintGray"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/login"
        android:background="@drawable/button_them"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLoginPW"
        app:layout_constraintEnd_toStartOf="@id/signBtn"
        android:textSize="18sp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/signBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textAllCaps="false"

        android:background="@drawable/button_them"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginBtn"
        app:layout_constraintTop_toBottomOf="@id/editLoginPW"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:padding="10dp"/>

<!--    <CheckBox-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/loginBtn"-->
<!--        android:id="@+id/maintainLoginCheckbox"-->
<!--        app:layout_constraintStart_toStartOf="@id/loginBtn"-->
<!--        android:text="@string/maintainLogin"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>